--- a/Client/Layout/MainLayout.razor
+++ b/Client/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
@@ -6,7 +7,15 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <AuthorizeView>
+                <Authorized>
+                    <a class="btn btn-none text-danger" @onclick="LogoutClicked">Logout</a>
+                </Authorized>
+                <NotAuthorized>
+                    <a class="btn btn-none" href="identity/account/login">Login</a>
+                    <a class="btn btn-none" href="identity/account/register">Register</a>
+                </NotAuthorized>
+            </AuthorizeView>
         </div>
 
         <article class="content px-4">
@@ -14,3 +23,13 @@
         </article>
     </main>
 </div>
+
+@code {
+    async Task LogoutClicked()
+    {
+        var logoutModel = new UserSession();
+        var customAuthstateProvider = (CustomAuthenticationStateProvider)AuthStateProvider;
+        await customAuthstateProvider.UpdateAuthenTicationState(logoutModel);
+        Navigation.NavigateTo("/", forceLoad: true);
+    }
+}
